--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "cors": "2.8.5",
     "dotenv": "16.0.1",
     "express": "4.18.1",
+    "express-openid-connect": "^2.12.0",
     "morgan": "1.10.0",
     "sequelize": "6.20.1",
     "sqlite3": "5.0.8"
